# AOC_2015_haskell

day1/: day1.cabal
day1/app/: Main.hs
day2/: day2.cabal
day2/app/: Main.hs
day3/: day3.cabal
day3/app/: Main.hs
day4/: day4.cabal  stack.yaml
day4/app/: Main.hs
day5/: day5.cabal  stack.yaml
day5/app/: Main.hs
day6/: day6.cabal
day6/app/: Main.hs
day7/: LICENSE  day7.cabal
day7/app/: Main.hs
