name:                day7
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cphang99/day7#readme
license:             BSD3
license-file:        LICENSE
author:              C.Phang
maintainer:          cphang99@gmail.com
copyright:           Copyright: (c) 2017 C.Phang
category:            haskell-projects
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable day7-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , day7
                     , split
                     , parsec
  default-language:    Haskell2010

test-suite day7-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , day7
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cphang99/day7
